cmake_minimum_required(VERSION 2.8.4)
set(CMAKE_TOOLCHAIN_FILE ${CMAKE_SOURCE_DIR}/cmake/ArduinoToolchain.cmake)
set(CMAKE_CXX_STANDARD 11)
set(PROJECT_NAME mk-bus-rs248)
set(${PROJECT_NAME}_BOARD nano)
set(ARDUINO_CPU atmega328)
project(${PROJECT_NAME})
set(${PROJECT_NAME}_HDRS mkbus.h)
set(${PROJECT_NAME}_SRCS mkbus.cpp sketch.cpp)
# link_directories(${CMAKE_CURRENT_SOURCE_DIR}/)
# add_subdirectory()
# set(${PROJECT_NAME}_SKETCH)
# set(${<@PROJECT_NAME@>}_PROGRAMMER avrispmkii)
 set(${PROJECT_NAME}_PORT COM4)
# set(${<@PROJECT_NAME@>}_AFLAGS -v)
# set(nano.upload.speed 9600)
generate_arduino_firmware(${PROJECT_NAME})